# tcp_ip_server_client

./: CMakeLists.txt  README.md  design.md  main.cpp  todo.md
docs/: tcp_ip.md  theory.md
examples/multiclient/: CMakeLists.txt  client_1.cpp  client_2.cpp  client_3.cpp
examples/single_client/: CMakeLists.txt  server.cpp
include/: client.h  tcp_server.h
src/: client.cpp  server.cpp  tcp_client.cpp  tcp_server.cpp
src/client/: tcp_client.cpp
src/server/: main.cpp  tcp_server.cpp
